--- a/nftvs/nftv2.html
+++ b/nftvs/nftv2.html
@@ -58,7 +58,7 @@
 		</div>
 		<br>
 			<hr class="a">
-			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
+			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>SCREEN-SIZE: 50 X 89 CM<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS1.html"></iframe>
 			<h2 style="color: rgb(0, 0, 255)">ETH VALUE USD 2020 - 2021</h2>
