--- a/nftvs/nftv3.html
+++ b/nftvs/nftv3.html
@@ -58,7 +58,7 @@
 		</div>
 		<br>
 			<hr class="a">
-			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: SAMSUNG / 19XX</p>
+			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>SCREEN-SIZE: 29 X 41 CM<br>COLOR: VGA<br>BRAND: SAMSUNG / 19XX</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS3.html"></iframe>
 			<h2 style="color: rgb(0, 0, 255)">BTC ENERGY CONSUMPTION 2016 - 2021</h2>
