--- a/nftvs/nftv4.html
+++ b/nftvs/nftv4.html
@@ -58,7 +58,7 @@
 		</div>
 		<br>
 			<hr class="a">
-			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
+			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>SCREEN-SIZE: 32.5 X 42.5 CM<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS4.html"></iframe>
 			<h2 style="color: rgb(0, 0, 255)">GLOBAL LAND AND OCEAN TEMPERATURE ANOMOLIES 1901 - 2000</h2>
