--- a/nftvs/nftv5.html
+++ b/nftvs/nftv5.html
@@ -58,7 +58,7 @@
 		</div>
 		<br>
 			<hr class="a">
-			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: PHILLIPS / 2001</p>
+			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>SCREEN-SIZE: 13 X 20 CM<br>COLOR: RGB<br>BRAND: PHILLIPS / 2001</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS5.html"></iframe>
 			<h2 style="color: rgb(0, 255, 0)">ALL NFT SALES 2018 - PRESENT</h2>
