--- a/process.html
+++ b/process.html
@@ -93,13 +93,13 @@ The overall goal and object of my research is to explore the NFT space as object
 			<!-- </div> -->
 			<!-- <button type="button" class="collapsible">OBERSVATIONS</button>
 			<div class="subCont"> -->
-				<h2>OBSERVATIONS</h2>
-				<hr class="a">
+				<!-- <h2>OBSERVATIONS</h2>
+				<hr class="a"> -->
 			<!-- </div>
 			<button type="button" class="collapsible">DATA_SCAPES</button>
 			<div class="subCont"> -->
-				<h2>DATA_SCAPE_PROCESS</h2>
-				<hr class="a">
+				<!-- <h2>DATA_SCAPE_PROCESS</h2>
+				<hr class="a"> -->
 			<!-- </div>
 			<button type="button" class="collapsible">WRITING</button>
 			<div class="subCont"> -->
