--- a/nftvs/nftv1.html
+++ b/nftvs/nftv1.html
@@ -60,13 +60,18 @@
 		</div>
 			<br>
 			<hr class="a">
-			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
+			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>SCREEN-SIZE: 50 X 89 CM<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS1.html"></iframe>
 			<h2 style="color: rgb(0, 0, 255)">TOTAL NFT SALES 2020 - 2021</h2>
 			<h2 style="color: rgb(0, 255, 0)">TOTAL ART NFT SALES 2020 - 2021</h2>
 			<hr class="a">
 			<img src="../data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-01.svg">
+
+			<!-- <div class="iframeCont">
+			<iframe src="https://www.youtube.com/embed/BQLADgbWcFQ?loop=1&playlist?list=PLQrteSoEaMWJoLpi-CGuBm_k-MoxGswRC;showinfo=0&modestbranding=1" width="100%" height="100%" allowfullscreen></iframe>
+		</div> -->
+
 			<h2>BASE MODELS</h2>
 			<hr class="a">
 			<div class="grid-container">
